add human approval